# Radio-Astronomy-Lab-Work

./: Final Data (updated as of end of 2_3_26).ipynb  Lab_1.ipynb  Lab_1_clean.ipynb  Lab_1_working.ipynb  Mora_Radio_Lab_1_Report.ipynb  README.md  SDR_gather.py  constant.py.save  kat_scrap.ipynb
.ipynb_checkpoints/: Final Data (updated as of end of 2_3_26)-checkpoint.ipynb  Lab_1-Copy1-checkpoint.ipynb  Lab_1-checkpoint.ipynb  Lab_1_working-checkpoint.ipynb  Mora_Radio_Lab_1_Report-checkpoint.ipynb  kat_scrap-checkpoint.ipynb
Katie_lab1_things/.ipynb_checkpoints/: Mora_Radio_Lab_1_Report-checkpoint.ipynb
Katie_lab1_things/ziptoplot/: __init__.py  plot.py
Lab1_data_archive/: Final Data (updated as of end of 2_3_26).ipynb
Lab1_notebooks_misc/: Lab_1_working.ipynb
Lab1_notebooks_misc/StraightThrough/: StraightThroughNotebook.ipynb
mak_work/: mak_pkg.py  pyproject.toml
mak_work/makpack/: pyproject.toml
mak_work/makpack/src/: mak_pkg.py
mak_work/makpack/src/mak_pkg.egg-info/: PKG-INFO  SOURCES.txt
ziptoplot/: caf.py  plot.py  unzip.py
